--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> XXXXXXX </title>
+  <title> Make Sure They Don’t See 😭 </title>
   <style>
     :root {
       --primary: #ff3366;
@@ -109,10 +109,10 @@
 
 	</div></div>
 <div class="container">
-<h1 class="video-title"> XXXXXXX </h1>
+<h1 class="video-title"> Make Sure They Don’t See 😭 </h1>
 	<div class="video-wrapper">
-<video controls autoplay muted playsinline controlsList="nodownload nofullscreen noremoteplayback" poster="https://cdn.aceimg.com/f13157b91.jpg">
-    <source src="https://cdn.videy.co/xxxxxx.mp4" type="video/mp4">
+<video controls autoplay muted playsinline controlsList="nodownload nofullscreen noremoteplayback" poster="https://cdn.aceimg.com/dda05fca6.jpg">
+    <source src="https://cdn.videy.co/QIkJilRq1.mp4" type="video/mp4">
 </video></div>
 <div class="ad-after-video">
 
